view now consistent with all devices

--- a/views/responses/acc_created.html
+++ b/views/responses/acc_created.html
@@ -16,28 +16,28 @@
         <form action="/signup" method="post">
                 <h1 class="text-center">Sign Up</h1>
 
-                <div class="col-lg-6 col-lg-offset-3">
+                <div class="col-xs-6 col-xs-offset-3">
                     <b>Username:</b>
                     <input type="text" class="form-control" name="user" placeholder="Username" />
                 </div>
 
-                <div class="col-lg-6 col-lg-offset-3">
+                <div class="col-xs-6 col-xs-offset-3">
                     <b>Password:</b>
                     <input type="password" class="form-control" name="pswd" placeholder="Password" />
                 </div>
-                <div class="col-lg-6 col-lg-offset-3">
+                <div class="col-xs-6 col-xs-offset-3">
                     <b>Confirm Password:</b>
                     <input type="password" class="form-control" name="pswdconf" placeholder="Password" />
                 </div>
                 <div>
-                <button type="submit" class="btn btn-success col-lg-2 col-lg-offset-5" id="signup" onclick="signUp()">Sign Up</button>
-                <div class="col-lg-6 col-lg-offset-3">
+                <button type="submit" class="btn btn-success col-xs-2 col-xs-offset-5" id="signup" onclick="signUp()">Sign Up</button>
+                <div class="col-xs-6 col-xs-offset-3">
                     <p>
                         <a href="/">Returning user? Click here to login</a>
                     </p>
 
                 </div>
-                <div class="alert alert-success alert-dismissable col-lg-6 col-lg-offset-3">
+                <div class="alert alert-success alert-dismissable col-xs-6 col-xs-offset-3">
                   <strong>Success!</strong> Account Created.
                 </div>
 
