--- a/views/responses/login_success.html
+++ b/views/responses/login_success.html
@@ -16,23 +16,23 @@
         <form action="/" method="post">
                 <h1 class="text-center">Sign In</h1>
 
-                <div class="col-lg-6 col-lg-offset-3">
+                <div class="col-xs-6 col-xs-offset-3">
                     <b>Username:</b>
                     <input type="text" class="form-control" name="user" placeholder="Username" />
                 </div>
 
-                <div class="col-lg-6 col-lg-offset-3">
+                <div class="col-xs-6 col-xs-offset-3">
                     <b>Password:</b>
                     <input type="password" class="form-control" name="pswd" placeholder="Password" />
                 </div>
 
-                <button type="submit" class="btn btn-success col-lg-2 col-lg-offset-5">Sign in</button>
-                <div class="col-lg-6 col-lg-offset-3">
+                <button type="submit" class="btn btn-success col-xs-2 col-xs-offset-5">Sign in</button>
+                <div class="col-xs-6 col-xs-offset-3">
                     <p>
                         <a href="signup">New user? Click here to sign up</a>
                     </p>
                 </div>
-                <div class="alert alert-success alert-dismissable col-lg-6 col-lg-offset-3">
+                <div class="alert alert-success alert-dismissable col-xs-6 col-xs-offset-3">
                   <strong>Success!</strong> Succesfully Logged In.
                 </div>
 
