--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,18 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Login</title>
+    <title>Signup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css"></link>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 
 <body>
     <div class="container-fluid">
-        <form action="/" method="post">
-                <h1 class="text-center">Sign In</h1>
+        <form action="/signup" method="post">
+                <h1 class="text-center">Sign Up</h1>
 
                 <div class="col-xs-6 col-xs-offset-3">
                     <b>Username:</b>
@@ -25,15 +24,24 @@
                     <b>Password:</b>
                     <input type="password" class="form-control" name="pswd" placeholder="Password" />
                 </div>
-
-                <button type="submit" class="btn btn-success col-xs-2 col-xs-offset-5">Sign in</button>
+                <div class="col-xs-6 col-xs-offset-3">
+                    <b>Confirm Password:</b>
+                    <input type="password" class="form-control" name="pswdconf" placeholder="Password" />
+                </div>
+                <div>
+                <button type="submit" class="btn btn-success col-xs-2 col-xs-offset-5" id="signup" onclick="signUp()">Sign Up</button>
                 <div class="col-xs-6 col-xs-offset-3">
                     <p>
-                        <a href="signup">New user? Click here to sign up</a>
+                        <a href="/">Returning User? Click Here To Login</a>
                     </p>
+
                 </div>
 
+
+            </div>
+
         </form>
+
     </div>
 </body>
 
